2007-05-09  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Base/Banshee.SmartPlaylist/Editor.cs: Properly fixed
	up to use the new search filter stuff

2007-05-09  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Widgets/SearchEntry.cs: Completely rewritten SearchEntry
	with a better filter API and proper GTK themeing

	* src/Core/Banshee.Widgets/HoverImageButton.cs: A cute button that may
	end up somewhere standalone, but for now makes up the filter and clear
	buttons in the new SearchEntry

	* src/Core/Banshee.Base/TrackFilterType.cs: Define what kind of filters
	can be made on the track view; means that logic can happen against this
	enum instead of lots of stupid Catalog.GetString()+string comparisons,
	so searching should actually be a bit faster

	* src/Core/Banshee.Base/Source.cs: Save a TrackFilterType instead of the
	old string filter name

	* src/Core/Banshee/PlayerInterface.cs: Use the new SearchEntry API which
	should actually bring search/filter speed improvements

	* src/Core/Banshee.Base/Banshee.SmartPlaylist/Editor.cs: Hackishly use
	the new SearchEntry API (needs finishing)

2007-05-07  Aaron Bockover  <abock@gnome.org>

	* src/Plugins/Banshee.Plugins.NotificationAreaIcon/NotificationAreaIconPlugin.cs:
	A nice piece of crack I'm not sure about yet - reverse the menu contents
	if the notification area is on the bottom of the screen so the most used
	items are closest to the panel - more usable in theory, but maybe it's
	just creepy?

	* src/Dap/Banshee.Dap.Ipod/DatabaseRebuilder.cs:
	* src/Core/Banshee.Base/Gui/TrackEditor.cs:
	* src/Core/Banshee.Base/FileTrackInfo.cs:
	* src/Core/Banshee.Base/StreamTagger.cs: Updated to use the TagLib# 2.0 
	API (BGO #436743, Sebastian Dröge)

	* ext/taglib-sharp/TagLib: Updated TagLib external reference back to
	TagLib# trunk for development work, may cause breakage at times during
	this development cycle

	* ext/taglib-sharp/Makefile.am:
	* ext/taglib-sharp/Makefile.MonoDevelop: